--- a/src/components/InputItem/InputItem.module.css
+++ b/src/components/InputItem/InputItem.module.css
@@ -21,7 +21,7 @@
   color: #fff;
   background: #356eff;
   border-radius: 6px;
-  font: normal normal 14px/16px Robotos;
+  font: normal normal 14px/16px 'Roboto';
   height: auto;
   max-width: 240px;
   padding: 8px 11px;
@@ -35,7 +35,7 @@
   color: #fff;
   background: #356eff;
   border-radius: 6px;
-  font: normal normal 14px/16px Roboto;
+  font: normal normal 14px/16px' Roboto';
   height: auto;
   width: auto;
   padding: 8px 11px;
@@ -75,4 +75,19 @@
 .button:hover {
   cursor: pointer;
   opacity: 0.9;
+}
+
+@media (min-width: 321px) and (max-width: 409px) {
+
+  .exist_field:before,
+  .empty_field:before {
+    font: normal normal 12px/16px 'Roboto';
+  }
+}
+
+@media (max-width: 320px) {
+
+  .input_field {
+    font-size: 10px;
+  }
 }
