--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,14 +1,17 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap');
+
 body {
-  padding-top: 10px;
-  background: #eee;
-  font-family: helvetica, sans-serif;
-  display: flex;
-  justify-content: center;
+  background: #f7f7f7;
 }
 
 .wrap {
-  width: 600px;
-  position:relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+  width: 700px;
+  font-family: helvetica, sans-serif;
+  position: relative;
 }
 
 .school_link {
@@ -16,12 +19,11 @@ body {
   left: 0;
 }
 
-.school_logo {  
-  background: url(./img/logo.svg) no-repeat;
-  height: 50px;
-  width: 100px;
+.school_logo {
+  background: url('./img/logo.svg') no-repeat;
+  height: 48px;
+  width: 96px;
   position: absolute;
-  top: 5px;
   left: 4px;
 }
 
@@ -34,6 +36,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 45px;
+  margin-bottom: 24px;
 }
 
 .link {
@@ -41,11 +45,11 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font: normal bold 14px/16px helvetica;
+  font: normal bold 16px/19px helvetica;
   text-decoration: none;
   outline: none;
-  height: 40px;
-  width: 110px;
+  height: 44px;
+  width: 126px;
 }
 
 .link:hover {
@@ -57,12 +61,77 @@ body {
   color: #fff;
   background: #356eff;
   box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.25);
-  border-radius: 30px;
+  border-radius: 37px;
 }
 
-.context {
-  display: flex;
-  justify-content: center;
-  padding-top: 10px;
-  padding-bottom: 30px;
+@media (min-width: 410px) and (max-width: 767px) {
+
+  .wrap {
+    max-width: 650px;
+    min-width: 370px;
+    max-height: 600px;
+    margin: auto;
+  }
+
+  .section {
+    margin-bottom: 15px;
+  }
+
+  .link {
+    margin-bottom: 0;
+    height: 40px;
+    width: 100px;
+  }
+}
+
+@media (min-width: 321px) and (max-width: 409px) {
+
+  .wrap {
+    max-width: 400px;
+    min-width: 321px;
+    max-height: 600px;
+    margin: auto;
+  }
+
+  .section {
+    margin-bottom: 10px;
+  }
+
+  .link {
+    font: normal bold 14px/19px helvetica;
+    margin-bottom: 0;
+    height: 40px;
+    width: 90px;
+  }
+
+  .school_logo {
+    background-size: contain;
+    height: 30px;
+  }
+}
+
+@media (max-width: 320px) {
+
+  .wrap {
+    width: 310px;
+    max-height: 480px;
+    margin: auto;
+  }
+
+  .section {
+    margin-bottom: 10px;
+  }
+
+  .link {
+    font: normal bold 14px/19px helvetica;
+    margin-bottom: 0;
+    height: 30px;
+    width: 70px;
+  }
+
+  .school_logo {
+    background-size: contain;
+    height: 25px;
+    width: 35px;
+  }
 }
