--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -113,3 +113,19 @@
   cursor: pointer;
   opacity: 0.7;
 }
+
+@media (min-width: 321px) and (max-width: 409px) {
+
+  .email_link,
+  .phone_link {
+    margin-bottom: 5px;
+  }
+}
+
+@media (max-width: 320px) {
+
+  .email_link,
+  .phone_link {
+    margin-bottom: 5px;
+  }
+}
