--- a/src/components/Todo/Todo.module.css
+++ b/src/components/Todo/Todo.module.css
@@ -16,7 +16,7 @@
 }
 
 .title {
-  font: normal bold 28px/100% Roboto;
+  font: normal bold 28px/100% 'Roboto';
 }
 
 .items_section {
@@ -34,4 +34,65 @@
 ::-webkit-scrollbar-thumb {
   background: #ccc;
   border-radius: 6px;
+}
+
+@media (min-width: 410px) and (max-width: 767px) {
+
+  .wrap {
+    max-width: 640px;
+    min-width: 360px;
+    min-height: 500px;
+    padding: 20px;
+  }
+
+  .title {
+    margin: 0 0 20px 0;
+    font: normal bold 25px/100% 'Roboto';
+  }
+
+  .header {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .items_section {
+    max-height: 500px;
+  }
+}
+
+@media (min-width: 321px) and (max-width: 409px) {
+
+  .wrap {
+    max-width: 390px;
+    min-width: 310px;
+    max-height: 550px;
+    padding: 20px;
+  }
+
+  .header {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
+@media (max-width: 320px) {
+
+  .wrap {
+    width: 300px;
+    height: 550px;
+    padding: 20px;
+  }
+
+  .title {
+    margin: 0 0 20px 0;
+    font: normal bold 20px/100% 'Roboto';
+  }
+
+  .header {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
